--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+html {
+    touch-action: manipulation;
+}
+
 * {
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 500;
@@ -32,17 +36,22 @@
 
 .main {
     background-color: #EEFF88;
-    padding: 10vw;
+    text-align: center;
+}
+
+.window {
+    display: inline-block;
+    margin: 3vw;
+}
+
+.controller {
+    display: flex;
+    flex-direction: row;
+    margin: 0px 3vw 0px 12vw;
+    text-align: center;
 }
 
 .footer {
     background-color: #88EEff;
 
-}
-
-#canvas {
-    height:60vw;
-    width:80vw;
-    background-color: white;
-    border-radius: 2vw;
 }
